# rss2sqlite

./: .gitignore  Cargo.toml  README.md  config.example.json
src/: main.rs
src/modules/: config.rs  sql.rs
