[package]
name = "RSS2SQLite"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug-assertions = true
overflow-checks = true

[profile.release]
strip = "debuginfo"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29"
rss = "2.0"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
anyhow = "1.0.89"
