[package]
name = "RSS2SQLite"
version = "0.1.1"
edition = "2021"

[profile.dev]
debug-assertions = true
overflow-checks = true

[profile.release]
strip = "debuginfo"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rusqlite = "0.32.1"
rss = "2.0.9"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
anyhow = "1.0.89"
confy = "0.6.1"

